Fixed: fix the extra space on the left hand side of the screen

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -61,11 +61,12 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        margin-left: 0;
     }
     .hero h1 {
         margin-top: 50px;
         width: 90%;
-        font-size: 45px;
+        font-size: 40px;
         text-align: center;
     }
 
